# pipeline-educacao-brasil

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: dia-01-setup.md  dia-02-ingestao.md  dia-03-armazenamento.md  dia-04-analise.md  dia-04-analize.md  dia-05-visualizacao.md  dia-06-inep.md  dia-07-cruzamento.md  dia-08-visualizacoes-avancadas.md  dia-09-testes.md  dia-10-orquestracao.md  dia-11-ml.md  dia-12-documentacao-final.md
scripts/: run_pipeline.py
src/: config.py  logger.py
src/analysis/: build_analytics.py  ml_models.py  run.py
src/ingestion/: extract.py  extract_inep.py  run.py
src/transformation/: load.py  parse.py  run.py
src/visualization/: charts.py  run.py
tests/: test_data_quality.py  test_structure.py
