[project]
name = "pipeline-educacao-brasil"
version = "0.1.0"
description = "Pipeline de dados sobre educação pública no Brasil"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["."]